fix: hidden visibility style

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -94,6 +94,8 @@ button {
 }
 
 .visually-hidden {
+  width: 0px;
+  height: 0px;
   visibility: hidden;
 }
 
